# D_Estate

./: .gitignore  ARCHITECTURE.md  README.md  vercel.json
backend/: schema.sql
contracts/: Cargo.toml
contracts/src/: lib.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx  PropertyCard.tsx  PropertyModal.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/hooks/: useFreighter.ts
frontend/src/lib/: mockData.ts  stellar.ts  supabase.ts
frontend/src/pages/: Dashboard.tsx  DashboardPage.tsx  FeedbackPage.tsx  LandingPage.tsx  ListProperty.tsx  ListPropertyPage.tsx  Marketplace.tsx  MarketplacePage.tsx
frontend/src/utils/: contract.ts
